syntax = "proto3";

service Basket {
	rpc GetBasket(GetBasketRequest) returns (BasketResponse);
	rpc UpdateBasket(UpdateBasketRequest) returns (BasketResponse);
}

message GetBasketRequest {
}

message BasketResponse {
	string customerId = 1;
	repeated BasketItem items = 2;
}

message BasketItem {
	string id = 1;
	string productId = 2;
	string productName = 3;
	double unitPrice = 4;
	int32 quantity = 5;
	string pictureUri = 6;
}

message UpdateBasketRequest {
	string customerId = 1;
	repeated BasketItem items = 2;
}